# reset-trial

./: .gitignore  Cargo.toml  README.md  search_history.json
assets/: agi3w-vjwy1.icns  icon.icns  logo.icns
src/: main.rs
